# doorbell

./: README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: the-orphaned-consumer.md
examples/: two_agents.py
src/doorbell/: __init__.py  bus.py  store.py  waiter.py  wakeline.py
tests/: test_bus.py  test_cross_process.py  test_failure_modes.py  test_wakeline.py
