[project]
name = "doorbell-delivery"
version = "0.1.0"
description = "Durable message delivery for crash-prone agent sessions: nothing resident, nothing orphaned."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jacob Malm" }]
keywords = ["agents", "messaging", "durability", "llm", "delivery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/Jacobobber/doorbell"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doorbell"]

[tool.pytest.ini_options]
testpaths = ["tests"]
